--- a/sticknoteapp/src/App.css
+++ b/sticknoteapp/src/App.css
@@ -33,5 +33,47 @@ padding: 20px;
 background: #fff;
 box-shadow: 0 0 5px 0 rgb(0,0,0,.4);
 z-index: 4;
+width: 300px;
 transform:translateX(-50%) translateY(40px); /* tıkladığımda box farenin konumunun tam ortasında açılsın.*/
+}
+.note-box select {
+  appearance: none;
+  border-radius: 3px;
+  width: 100%;
+  height: 40px;
+  padding: 0 20px;
+  color: #fff;
+  font-size: 14;
+  font-weight: 500;
+  background: var(--color);
+  cursor: pointer;
+  text-align: center;
+
+}
+.note-box textarea{
+  width: 100%;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin-top: 10px;
+  border-radius: 3px;
+  resize: none;
+}
+
+.note-box textarea:focus{
+  border-color: #000;
+}
+
+.note-box-number{
+color: #fff;
+position: absolute;
+top: 0;
+left: 50%;
+transform: translateX(-50%) translateY(calc(-100% - 20px));
+width: 40px;
+height: 40px;
+border-radius: 50%;
+background: var(--color);
+display: flex;
+align-items: center;
+justify-content: center;
 }
